doc: dbg with pr workflow

--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -99,7 +99,7 @@ jobs:
   doc-build:
     name: "Build documentation"
     runs-on: [self-hosted, pyhealth]
-    needs: doc-style
+    # needs: doc-style
     steps:
 
       - name: "Checkout the project"
@@ -125,7 +125,7 @@ jobs:
           AWP_ROOT241: C:\\Program Files\\ANSYS Inc\\v241
           DPF_STANDALONE_PATH: C:\\Program Files\\ANSYS Inc\\dpf-server-2024.2rc0
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
-          NIGHTLY_DOC_BUILD: 0
+          NIGHTLY_DOC_BUILD: 1
         run: |
           tox -e doc-links,doc-html,doc-pdf
 
