--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -119,7 +119,7 @@ jobs:
           PYANSYS_HEART_FLUENT_VERSION: 24.1
           PYFLUENT_LAUNCH_CONTAINER: 0
           # PYANSYS_HEART_LSDYNA_PATH: C:\Program Files\ANSYS Inc\LS-DYNA\R16.0\windows\R16.0.exe
-          PYANSYS_HEART_LSDYNA_PATH: C:\Program Files\ANSYS Inc\LS-DYNA\R16.0\windows\mpp\intelmpi\ls-dyna_mpp_d_R16.0\ls-dyna_mpp_d_R16.0.exe
+          PYANSYS_HEART_LSDYNA_PATH: 'C:\\Program Files\\ANSYS Inc\\LS-DYNA\R16.0\windows\\mpp\\intelmpi\\ls-dyna_mpp_d_R16.0\\ls-dyna_mpp_d_R16.0.exe'
           PYANSYS_HEART_LSDYNA_PLATFORM: windows
           # PYANSYS_HEART_LSDYNA_TYPE: "smp"
           PYANSYS_HEART_LSDYNA_TYPE: "intelmpi"
@@ -129,7 +129,6 @@ jobs:
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
           NIGHTLY_DOC_BUILD: 0
         run: |
-          # set environment variables for LS-DYNA
           "C:\Program Files\ANSYS Inc\LS-DYNA\R16.0\windows\mpp\set_intelmpi_env_vars.bat"
           tox -e doc-links,doc-html,doc-pdf
 
