--- a/tox.ini
+++ b/tox.ini
@@ -92,6 +92,7 @@ commands =
 
     # Ensure DPF standalone version is installed. Managed through environment variable "DPF_STANDALONE_PATH"
     links,html: uv pip install -e "{env:DPF_STANDALONE_PATH}"
+    links,html: cmd /c "C:\Program Files\ANSYS Inc\LS-DYNA\R16.0\windows\mpp\set_intelmpi_env_vars.bat"
 
     # Render documentation with desired builder
     links,html,pdf: sphinx-build -d "{toxworkdir}/doc_doctree" {env:SOURCE_DIR} "{toxinidir}/{env:BUILD_DIR}/{env:BUILDER}" {env:BUILDER_OPTS} -b {env:BUILDER}
