--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -99,7 +99,7 @@ jobs:
   doc-build:
     name: "Build documentation"
     runs-on: [self-hosted, pyhealth]
-    # needs: doc-style
+    needs: doc-style
     steps:
 
       - name: "Checkout the project"
@@ -118,12 +118,10 @@ jobs:
         env:
           PYANSYS_HEART_FLUENT_VERSION: 24.1
           PYFLUENT_LAUNCH_CONTAINER: 0
-          # PYANSYS_HEART_LSDYNA_PATH: C:\Program Files\ANSYS Inc\LS-DYNA\R16.0\windows\R16.0.exe
-          # PYANSYS_HEART_LSDYNA_PATH: C:\\Program Files\ANSYS Inc\\LS-DYNA\\R16.0\windows\\mpp\\intelmpi\\ls-dyna_mpp_d_R16.0\\ls-dyna_mpp_d_R16.0.exe
-          # PYANSYS_HEART_LSDYNA_PLATFORM: windows
-          # PYANSYS_HEART_LSDYNA_TYPE: "smp"
-          # PYANSYS_HEART_LSDYNA_TYPE: "intelmpi"
-          # LSTC_LICENSE: ansys
+          PYANSYS_HEART_LSDYNA_PATH: C:\Program Files\ANSYS Inc\LS-DYNA\R16.0\windows\R16.0.exe
+          PYANSYS_HEART_LSDYNA_PLATFORM: windows
+          PYANSYS_HEART_LSDYNA_TYPE: "smp"
+          LSTC_LICENSE: ansys
           AWP_ROOT241: C:\\Program Files\\ANSYS Inc\\v241
           DPF_STANDALONE_PATH: C:\\Program Files\\ANSYS Inc\\dpf-server-2024.2rc0
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
