--- a/.github/workflows/ci_cd_night.yml
+++ b/.github/workflows/ci_cd_night.yml
@@ -109,6 +109,7 @@ jobs:
           PYANSYS_HEART_LSDYNA_PATH: C:\Program Files\ANSYS Inc\LS-DYNA\R16.0\windows\R16.0.exe
           PYANSYS_HEART_LSDYNA_PLATFORM: windows
           PYANSYS_HEART_LSDYNA_TYPE: "smp"
+          PYANSYS_HEART_NUM_CPU: 4
           LSTC_LICENSE: ansys
           AWP_ROOT241: C:\\Program Files\\ANSYS Inc\\v241
           DPF_STANDALONE_PATH: C:\\Program Files\\ANSYS Inc\\dpf-server-2024.2rc0
