--- a/.github/workflows/ci_cd_night.yml
+++ b/.github/workflows/ci_cd_night.yml
@@ -2,7 +2,7 @@ name: night
 
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 23 * * *'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -109,11 +109,12 @@ jobs:
           PYANSYS_HEART_LSDYNA_PATH: C:\Program Files\ANSYS Inc\LS-DYNA\R16.0\windows\R16.0.exe
           PYANSYS_HEART_LSDYNA_PLATFORM: windows
           PYANSYS_HEART_LSDYNA_TYPE: "smp"
+          PYANSYS_HEART_NUM_CPU: 4
           LSTC_LICENSE: ansys
           AWP_ROOT241: C:\\Program Files\\ANSYS Inc\\v241
           DPF_STANDALONE_PATH: C:\\Program Files\\ANSYS Inc\\dpf-server-2024.2rc0
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
-          NIGHTLY_DOC_BUILD: 0
+          NIGHTLY_DOC_BUILD: 1
         run: |
           tox -e doc-links,doc-html,doc-pdf
 
