--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -130,8 +130,7 @@ jobs:
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
           NIGHTLY_DOC_BUILD: 0
         run: |
-          cmd /c "C:\Program Files (x86)\Intel\oneAPI\setvars.bat"
-          echo %I_MPI_ONEAPI_ROOT%
+          echo $env:ONEAPI_ROOT
           tox -e doc-links,doc-html,doc-pdf
 
       - name: Upload HTML documentation artifact
