ci: dbg mpi vars

--- a/tox.ini
+++ b/tox.ini
@@ -59,7 +59,7 @@ description =
 allowlist_externals =
     pdflatex
     uv
-    Start-Process
+    ; Start-Process
 skip_install =
     clean: true
 setenv =
@@ -93,7 +93,7 @@ commands =
 
     # Ensure DPF standalone version is installed. Managed through environment variable "DPF_STANDALONE_PATH"
     links,html: uv pip install -e "{env:DPF_STANDALONE_PATH}"
-    links,html: Start-Process "C:/Program Files (x86)/Intel/oneAPI/setvars.bat"
+    ; links,html: Start-Process "C:/Program Files (x86)/Intel/oneAPI/setvars.bat"
 
     # Render documentation with desired builder
     links,html,pdf: sphinx-build -d "{toxworkdir}/doc_doctree" {env:SOURCE_DIR} "{toxinidir}/{env:BUILD_DIR}/{env:BUILDER}" {env:BUILDER_OPTS} -b {env:BUILDER}
