--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -130,8 +130,8 @@ jobs:
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
           NIGHTLY_DOC_BUILD: 0
         run: |
-          echo $env:ONEAPI_ROOT
-          tox -e doc-links,doc-html,doc-pdf
+          cmd /c C:\Users\ansys\actions-runner\_work\pyansys-heart\pyansys-heart\doc\make.bat html
+          # tox -e doc-links,doc-html,doc-pdf
 
       - name: Upload HTML documentation artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
