--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -128,7 +128,8 @@ jobs:
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
           NIGHTLY_DOC_BUILD: 0
         run: |
-          Powershell.exe -File "C:\Program Files\ANSYS Inc\LS-DYNA\R16.0\windows\mpp\set_intelmpi_env_vars.ps1"
+          cmd.exe "/K" '"C:\Program Files (x86)\Intel\oneAPI\setvars.bat" && powershell'
+          "C:\Users\ansys\set_intelmpi_env_vars.ps1"
           tox -e doc-links,doc-html,doc-pdf
 
       - name: Upload HTML documentation artifact
