ci: use cmd shell

--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -130,6 +130,8 @@ jobs:
         run: |
           cmd.exe "/K" '"C:\Program Files (x86)\Intel\oneAPI\setvars.bat" && powershell'
           "C:\Users\ansys\set_intelmpi_env_vars.ps1"
+          Powershell.exe -File "C:\Users\ansys\set_intelmpi_env_vars.ps1"
+          echo $env:PATH
           tox -e doc-links,doc-html,doc-pdf
 
       - name: Upload HTML documentation artifact
