--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ dependencies = [
     "numpy<=2.2.4",
     "pandas<=3.0.0",
     "pint>=0.24.4",
-    "pyvista>=0.44.1",
+    "pyvista>=0.44.1,< 0.45",
     "scipy<=1.15.2",
     "validators>=0.34.0",
     "vtk>=9.1.0,<9.4",
