--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -119,9 +119,6 @@ jobs:
         env:
           PYANSYS_HEART_FLUENT_VERSION: 24.1
           PYFLUENT_LAUNCH_CONTAINER: 0
-          PYANSYS_HEART_LSDYNA_PATH: C:\Users\ansys\LS-DYNA\R16.0\windows\mpp\intelmpi\ls-dyna_mpp_d_R16.0\ls-dyna_mpp_d_R16.0.exe
-          PYANSYS_HEART_LSDYNA_TYPE: intelmpi
-          PYANSYS_HEART_LSDYNA_PLATFORM: windows
           PYANSYS_HEART_NUM_CPU: 4
           ANSYS_DPF_ACCEPT_LA: Y
           AWP_ROOT241: C:\\Program Files\\ANSYS Inc\\v241
@@ -129,6 +126,8 @@ jobs:
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
           NIGHTLY_DOC_BUILD: 0
         run: |
+          echo $env:PYANSYS_HEART_LSDYNA_PATH
+          echo $env:PYANSYS_HEART_LSDYNA_PLATFORM
           echo $env:PATH
           tox -e doc-links,doc-html,doc-pdf
 
