--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -99,7 +99,7 @@ jobs:
   doc-build:
     name: "Build documentation"
     runs-on: [self-hosted, pyhealth]
-    # needs: doc-style
+    needs: doc-style
     steps:
 
       - name: "Checkout the project"
@@ -126,9 +126,6 @@ jobs:
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
           NIGHTLY_DOC_BUILD: 0
         run: |
-          echo $env:PYANSYS_HEART_LSDYNA_PATH
-          echo $env:PYANSYS_HEART_LSDYNA_PLATFORM
-          echo $env:PATH
           tox -e doc-links,doc-html,doc-pdf
 
       - name: Upload HTML documentation artifact
