--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ passenv =
 
 setenv =
     PYTHONUNBUFFERED = yes
-    coverage: PYTEST_EXTRA_ARGS = --cov=ansys.heart --cov-report=term --cov-report=xml:.cov/{env_name}/xml --cov-report=html:.cov/{env_name}/html
+    coverage: PYTEST_EXTRA_ARGS = --cov=ansys.health.heart --cov-report=term --cov-report=xml:.cov/{env_name}/xml --cov-report=html:.cov/{env_name}/html
 extras =
     tests
 commands =
