--- a/.github/workflows/ci_cd_release.yml
+++ b/.github/workflows/ci_cd_release.yml
@@ -76,6 +76,7 @@ jobs:
     name: "Build documentation"
     runs-on: [self-hosted, pyhealth]
     needs: doc-style
+    timeout-minutes: 720
     steps:
 
       - name: "Checkout the project"
