--- a/.github/workflows/ci_cd_night.yml
+++ b/.github/workflows/ci_cd_night.yml
@@ -2,7 +2,7 @@ name: night
 
 on:
   schedule:
-    - cron: '0 23 * * *'
+    - cron: '0 22 * * *'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -88,6 +88,7 @@ jobs:
     name: "Build documentation"
     runs-on: [self-hosted, pyhealth]
     needs: doc-style
+    timeout-minutes: 720
     steps:
 
       - name: "Checkout the project"
