--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,8 @@ doc = [
     "sphinx-gallery==0.19.0",
     "sphinx-jinja==2.0.2",
     "sphinxcontrib-video==0.4.1",
+    "sphinx_design",
+    "pyvista[jupyter]",
 ]
 tests = [
     "pytest==8.3.5",
