Edits based on skimming rendered doc

--- a/doc/.vale.ini
+++ b/doc/.vale.ini
@@ -31,3 +31,4 @@ TokenIgnores = (:(func|class|meth|attr|py):`(?:.|\n)*?`)|(<.*>)
 # Removing Google-specific rule - Not applicable under some circumstances
 Google.WordList = NO
 Google.Colons = NO
+Vale.Terms = NO
