--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,8 +58,7 @@ doc = [
     "sphinx-jinja==2.0.2",
     "sphinxcontrib-video==0.4.1",
     "sphinx_design",
-    "pyvista[jupyter]==0.44.2",
-    "vtk==9.3.1",
+    "pyvista[jupyter]",
 ]
 tests = [
     "pytest==8.3.5",
