--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -73,7 +73,7 @@ jobs:
   doc-style:
     name: Documentation Style Check
     runs-on: ubuntu-latest
-    needs: changelog-fragment
+    # needs: changelog-fragment
     steps:
       - uses: ansys/actions/doc-style@4f15ff3ab1183912ce862d51b8c66ea124b052a1 # v9.0.2
         with:
