--- a/tox.ini
+++ b/tox.ini
@@ -87,8 +87,8 @@ commands =
     clean: python -c "import shutil, sys; shutil.rmtree(sys.argv[1], ignore_errors=True)" "{toxinidir}/{env:STATIC_DIR}/artifacts"
 
     # Ensure vtk compatibility
-    links,html: uv pip uninstall vtk
-    links,html: uv pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.3.20240907.dev0
+    ; links,html: uv pip uninstall vtk
+    ; links,html: uv pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.3.20240907.dev0
 
     # Ensure DPF standalone version is installed. Managed through environment variable "DPF_STANDALONE_PATH"
     links,html: uv pip install -e "{env:DPF_STANDALONE_PATH}"
