--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -133,6 +133,8 @@ jobs:
           NIGHTLY_DOC_BUILD: 0
         run: |
           tox -e doc-links,doc-html,doc-pdf
+          Dir -Recurse doc\source\examples | Get-Childitem
+          Dir -Recurse doc\_build\html\_images\examples | Get-Childitem
 
       - name: Upload HTML documentation artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
