docs: debug doc build

--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -135,6 +135,7 @@ jobs:
           tox -e doc-links,doc-html,doc-pdf
           Dir -Recurse doc\source\examples\preprocessor\images | Get-Childitem
           Dir -Recurse doc\_build\html\_images\examples | Get-Childitem
+          Start-Sleep -Seconds 5
 
       - name: Upload HTML documentation artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
