docs: debug doc build

--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -132,9 +132,9 @@ jobs:
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
           NIGHTLY_DOC_BUILD: 0
         run: |
-          tox -e doc-links,doc-html,doc-pdf
+          tox -e doc-links,doc-html
           Dir -Recurse doc\source\examples\preprocessor\images | Get-Childitem
-          Dir -Recurse doc\_build\html\_images\examples | Get-Childitem
+          Dir -Recurse doc\_build\html | Get-Childitem
           Start-Sleep -Seconds 5
 
       - name: Upload HTML documentation artifact
