--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -132,7 +132,7 @@ jobs:
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
           NIGHTLY_DOC_BUILD: 0
         run: |
-          tox -e doc-links,doc-html
+          tox -e doc-links,doc-html,doc-pdf
           Dir -Recurse doc\source\examples\preprocessor\images | Get-Childitem
           Dir -Recurse doc\_build\html\_images | Get-Childitem
           Start-Sleep -Seconds 5
