docs: debug doc build

--- a/tox.ini
+++ b/tox.ini
@@ -87,11 +87,11 @@ commands =
     clean: python -c "import shutil, sys; shutil.rmtree(sys.argv[1], ignore_errors=True)" "{toxinidir}/{env:STATIC_DIR}/artifacts"
 
     # Ensure vtk compatibility
-    links,html: uv pip uninstall vtk
-    links,html: uv pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.3.20240907.dev0
+    links,html,pdf: uv pip uninstall vtk
+    links,html,pdf: uv pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.3.20240907.dev0
 
     # Ensure DPF standalone version is installed. Managed through environment variable "DPF_STANDALONE_PATH"
-    links,html: uv pip install -e "{env:DPF_STANDALONE_PATH}"
+    links,html,pdf: uv pip install -e "{env:DPF_STANDALONE_PATH}"
 
     # Render documentation with desired builder
     links,html,pdf: sphinx-build -d "{toxworkdir}/doc_doctree" {env:SOURCE_DIR} "{toxinidir}/{env:BUILD_DIR}/{env:BUILDER}" {env:BUILDER_OPTS} -b {env:BUILDER}
