--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -99,7 +99,7 @@ jobs:
   doc-build:
     name: "Build documentation"
     runs-on: [self-hosted, pyhealth]
-    # needs: doc-style
+    needs: doc-style
     steps:
 
       - name: "Checkout the project"
@@ -133,9 +133,7 @@ jobs:
           NIGHTLY_DOC_BUILD: 0
         run: |
           tox -e doc-links,doc-html,doc-pdf
-          Dir -Recurse doc\source\examples\preprocessor\images | Get-Childitem
-          Dir -Recurse doc\_build\html\_images | Get-Childitem
-          Start-Sleep -Seconds 5
+
 
       - name: Upload HTML documentation artifact
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # v4.6.2
