--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -132,8 +132,8 @@ jobs:
           PYFLUENT_UI_MODE: no_gui # default hidden_gui fails on self-hosted runner
           NIGHTLY_DOC_BUILD: 0
         run: |
-          tox -e doc-html,doc-links
-          Get-Location
+          tox -e doc-html,doc-links,doc-pdf
+          # Check if the examples folder exists and list its contents
           $examples_folder = "doc\_build\html\_images\examples"
           if (Test-Path $examples_folder){ Dir -Recurse $examples_folder | Get-Childitem} else {Write-Host "WARNING: Expecting an examples folder in $examples_folder. Interactive plots will not work..."}
 
