--- a/.github/workflows/ci_cd_pr.yml
+++ b/.github/workflows/ci_cd_pr.yml
@@ -100,6 +100,7 @@ jobs:
     name: "Build documentation"
     runs-on: [self-hosted, pyhealth]
     needs: doc-style
+    timeout-minutes: 120
     steps:
 
       - name: "Checkout the project"
