--- a/.github/workflows/ci_cd_night.yml
+++ b/.github/workflows/ci_cd_night.yml
@@ -27,7 +27,7 @@ jobs:
    strategy:
      fail-fast: false
      matrix:
-       python-version: ['3.11', '3.12']
+       python-version: ['3.10', '3.11', '3.12']
        tests:
          - { name: "Base", runner: "ubuntu-latest", markers: "not (requires_fluent or requires_dpf)", tox_extra_args: ""}
          - { name: "PyDPF", runner: "ubuntu-latest", markers: "requires_dpf", needs_dpf: true}
